src/objects/Work_Order_Activity_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Current_Activity__c</fullName>
        <formula>Tradesman__r.Current_Work_Order_Activity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status_Date__c</fullName>
        <formula>Tradesman__r.Tradesman_Status_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <formula>TEXT(Tradesman__r.Tradesman_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tradesman__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tradesman</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Order Activity Assignments</relationshipLabel>
        <relationshipName>Work_Order_Activity_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_Activity__c</fullName>
        <label>Work Order Activity</label>
        <referenceTo>Work_Order_Activity__c</referenceTo>
        <relationshipLabel>Assigned Tradesmen</relationshipLabel>
        <relationshipName>Work_Order_Activity_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>source_system_id__c</fullName>
        <externalId>true</externalId>
        <label>source system id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Work Order Activity Assignment</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Activity Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>